Turbo Stream _parts when adding repair items. Bug fixed where modal's z-index was too low to be on top of repair history.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -770,7 +770,7 @@ body {
 /* Add parts module */
 .modal {
     position: fixed;
-    z-index: 1;
+    z-index: 20;
     left: 0;
     top: 0;
     width: 100%;
